* CHANGES IN dplR VERSION 1.6.8

- Note that Darwin Alexander Pucha Cofrep has been added as a developer to work on plotRings() etc.

File: time.rwl.R
----------------

- Two convenience functions time.rwl and time.crn which extract the row.names of
  rwl and crn objects as numerics. Used as a S3 method with class rwl and class crn.
  This resulted in various changes to Rd files to make use of this capability.

File: seg.plot.R
----------------

- Fixed an issue with ylim and yaxs which should cut out extra white space.

File: xdate-dplR.Rnw
----------------

- Fixed typos 

* CHANGES IN dplR VERSION 1.6.7

File: latexify.R
----------------

- Fixed a bug in latexDate() which was causing failure on R-Devel.

File: plotRings.R
----------------

- New function to plot a cross section. Contributed by Darwin Pucha-Cofrep and Jakob Wernicke

File: DESCRIPTION
----------------

- Added in new authors (Darwin Pucha-Cofrep and Jakob Wernicke) 
- Added animation to Imports list
- Added gmp to Suggests

File: NAMESPACE
----------------

- Added plotRings to export and importFrom(animation, saveGIF) to support it

* CHANGES IN dplR VERSION 1.6.6

File: helpers.R
----------------

- Internal helper fix.names() is more robust when working in the C
  locale.

- Added internal helper function check.tempdir()

- Added internal helper function requireVersion()

File: latexify.R
----------------

- Fixed conversion bugs in the latexify() utility when working in
  the C locale.

File: rasterPlot.R
----------------

- In rasterPlot(Cairo = TRUE, ...), added a version check for the Cairo
  package

- Check if temporary directory is missing before use

File: read.tucson.R
----------------

- Check if temporary directory is missing before use

File: redfit.R
----------------

- Computation of the exact acceptance region of number of runs
  distributions in runcrit(), if not precomputed, depends on package
  "gmp" being installed (now optional).
