@@ -2,6 +2,14 @@
 
 - Note that Darwin Alexander Pucha Cofrep has been added as a developer to work on plotRings() etc.
 
+File: csv2rwl.R
+----------------
+Adding new function to read csv files in as rwl objects. Also adding that capability into read.rwl. Mikko should see if the error checks etc pass muster.
+
+File: read.rwl.R
+----------------
+Adding read2csv into read.rwl both as a format specification and as an auto detect. Mikko should see if the error checks etc pass muster.
+
 File: time.rwl.R
 ----------------
 
